Make title-bar follow tinted-tab-bar and panel-contrast options. Fixes #338

--- a/styles/title-bar.less
+++ b/styles/title-bar.less
@@ -1,5 +1,17 @@
 .title-bar {
-    background: darken(@base-color, 5%);
+    background: @app-background-color;
     border-bottom: none;
     color: @accent-text-color;
+
+    .panel-contrast & {
+        background: darken(@app-background-color, 2%);
+    }
+
+    .tinted-tab-bar & {
+        background: @base-color;
+    }
+
+    .panel-contrast.tinted-tab-bar & {
+        background: darken(@base-color, 5%);
+    }
 }
